added first test